[tool.poetry]
name = "poetry-test-project"
version = "0.1.0"
description = ""
authors = ["Aibek Narik <aibek.narik8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
